# django-docker

./: Dockerfile  README.md  docker-compose.yml  docker-entrypoint-celery.sh  docker-entrypoint.sh
api/: .env.example  .gitignore  pyproject.toml
api/django-docker/: asgi.py  urls.py  wsgi.py
api/django-docker/config/: base.py  celery_app.py  local.py  production.py
api/django-docker/users/: serializers.py  tasks.py  urls.py  views.py
api/django-docker/users/migrations/: 0001_initial.py
api/django-docker/users/templates/emails/: user.html  user.txt
